refactor: 내 경매 조회 리팩토링 - Dto에서 from메서드를 이용해 서비스 로직 간편화 - Response 타입을 명시적으로 작성